[gd_scene load_steps=12 format=4 uid="uid://btm2phyyoibdk"]

[ext_resource type="PackedScene" uid="uid://c3lnqei4itfpx" path="res://Prefab/TowerDefense/Character/TowerDefensePlant.tscn" id="1"]
[ext_resource type="Script" uid="uid://b82qkq27ci7n3" path="res://Asset/Anime/Character/Plant/Chapter2/Gloompult/Scene/TowerDefensePlantGloompult.gd" id="2"]
[ext_resource type="Resource" uid="uid://dyatu8exuiso7" path="res://Asset/Anime/Character/Plant/Chapter2/Gloompult/Config/TowerDefensePlantGloompult.tres" id="3"]
[ext_resource type="PackedScene" uid="uid://dbmne3onxa3v1" path="res://Asset/Anime/Character/Plant/Chapter2/Gloompult/Gloompult.tscn" id="4"]
[ext_resource type="Script" uid="uid://b6lojhfkgvhsw" path="res://addons/AdobeAnimateEditor/Node/AdobeAnimateSlot.gd" id="5"]
[ext_resource type="PackedScene" uid="uid://b5htxrgm8twcr" path="res://Script/Component/TowerDefense/Character/FireComponent/FireComponent.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://dir0f8lu1l3b3" path="res://Script/Component/TowerDefense/Character/AttackComponent/AttackComponent.tscn" id="7"]
[ext_resource type="Script" uid="uid://domu0k4tfig2c" path="res://addons/godot_state_charts/atomic_state.gd" id="8"]
[ext_resource type="Script" uid="uid://bnuagwct5sv5y" path="res://addons/godot_state_charts/transition.gd" id="9"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_mig1w"]
b = Vector2(2000, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e14jy"]
size = Vector2(73, 33)

[node name="TowerDefensePlantGloompult" node_paths=PackedStringArray("sprite") instance=ExtResource("1")]
script = ExtResource("2")
fireInterval = 3.0
sleepAnimeClip = "Sleep"
config = ExtResource("3")
sprite = NodePath("SpriteGroup/TransformPoint/Gloompult")

[node name="TransformPoint" parent="SpriteGroup" index="1"]
position = Vector2(0, 30)

[node name="Gloompult" parent="SpriteGroup/TransformPoint" index="0" node_paths=PackedStringArray("layerSlot") instance=ExtResource("4")]
position = Vector2(0, -30)
trueFrameRate = 30.0
layerSlot = [null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, NodePath("AdobeAnimateSlot"), null, null, null]

[node name="AdobeAnimateSlot" type="Node2D" parent="SpriteGroup/TransformPoint/Gloompult" index="0"]
position = Vector2(-84.3708, -26.7437)
rotation = 0.00115411
scale = Vector2(0.999173, 0.999173)
script = ExtResource("5")
followSlotId = 20
metadata/_custom_type_script = "uid://b6lojhfkgvhsw"

[node name="Marker2D" type="Marker2D" parent="SpriteGroup/TransformPoint/Gloompult/AdobeAnimateSlot" index="0"]
position = Vector2(16.1994, 11.0961)

[node name="ShadowSprite" parent="." index="3"]
position = Vector2(0, 30)

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(0, 0)

[node name="FireComponent" parent="." index="7" node_paths=PackedStringArray("firePosMarker", "checkArea") instance=ExtResource("6")]
unique_name_in_owner = true
firePosMarker = [NodePath("../SpriteGroup/TransformPoint/Gloompult/AdobeAnimateSlot/Marker2D")]
checkArea = NodePath("Area2D")
fireInterval = 3.0

[node name="Area2D" type="Area2D" parent="FireComponent" index="0"]
collision_layer = 0

[node name="CheckShape" type="CollisionShape2D" parent="FireComponent/Area2D" index="0"]
unique_name_in_owner = true
shape = SubResource("SegmentShape2D_mig1w")

[node name="AttackComponent" parent="." index="8" node_paths=PackedStringArray("checkArea") instance=ExtResource("7")]
unique_name_in_owner = true
attackType = "Default"
checkArea = NodePath("Area2D")

[node name="Area2D" type="Area2D" parent="AttackComponent" index="0"]

[node name="CollisionShape" type="CollisionShape2D" parent="AttackComponent/Area2D" index="0"]
unique_name_in_owner = true
position = Vector2(-1.5, -0.5)
shape = SubResource("RectangleShape2D_e14jy")

[node name="Attack" type="Node" parent="StateChart/CompoundState" index="2"]
script = ExtResource("8")

[node name="Attack2" type="Node" parent="StateChart/CompoundState" index="3"]
script = ExtResource("8")

[node name="ToAttack" type="Node" parent="StateChart/CompoundState" index="7"]
script = ExtResource("9")
to = NodePath("../Attack")
event = &"ToAttack"
delay_in_seconds = "0.0"

[node name="ToAttack2" type="Node" parent="StateChart/CompoundState" index="8"]
script = ExtResource("9")
to = NodePath("../Attack2")
event = &"ToAttack2"
delay_in_seconds = "0.0"

[connection signal="state_entered" from="StateChart/CompoundState/Attack" to="." method="AttackEntered"]
[connection signal="state_exited" from="StateChart/CompoundState/Attack" to="." method="AttackExited"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Attack" to="." method="AttackProcessing"]
[connection signal="state_entered" from="StateChart/CompoundState/Attack2" to="." method="Attack2Entered"]
[connection signal="state_exited" from="StateChart/CompoundState/Attack2" to="." method="Attack2Exited"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Attack2" to="." method="Attack2Processing"]
